Add support to upload excel files in bulk
- update excel files in ui to support upload action
- add backend code to support bulk upload
- current concept tries to parse the current storage location and adds
  it in the database if the current storage location is not found.
- tech debt and code cleanup
- add swagger support for adding bulk inventories
- use proper redux config for bulk inventories
- update constants to display table values properly
- add timestamps, display recent notifications
- add timestamps while user is creating new inventory
- display recently updated items first in profile page
- add required fields to constants for profile page to add inventory.
- extract uploadData for EditEventImage
- restrict download btn in inventories
- fix for data hoard
- add ability to extract component
- cleanup css and tech debt
- update components to be reusable
- tech debt and css cleanup
- seperate scriptdata and datagen
- seperate scriptdata and datagen
- address test file according to api file
- add test skeleton for inventoriesdb.go
- add unit test for add new note section
- add heading styles to menu items
- added heading styles like card component for Recent Activites,
  Inventories and Profile page. Fixed css if found any bugs.
- fix search for view all active events
- increase token validity time to 7m
- update deployment guide
- add test data in sql for notes and inventories
- add proper comments on makefile so that development is easier
- add unit test fixes for inventories and profile page
closes #106
